--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>footballAdmin</title>
-    <link rel="stylesheet" th:href="@{/css/adminPage.css}">
+    <title>signup</title>
+    <link rel="stylesheet" th:href="@{/css/member/signup.css}">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     <div id="wrap">
         <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
         <div class="right-menu">
-            <h1>DASHBOARD</h1>
+            <h1>회원가입</h1>
             <div class="right-con">
                 <div class="memberAll">
                     <h1>회원</h1>
