회원가입,로그인 페이지 디자인

--- a/src/main/resources/templates/fragment/common/adminHeader.html
+++ b/src/main/resources/templates/fragment/common/adminHeader.html
@@ -2,7 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
   <link rel="stylesheet" href="/static/css/common/adminHeader.css">
 <div class="header" th:fragment="adminHeaderFragment">
-    <h1 class="logo">동호회 관리자</h1> 
+  <div class="logo">
+    <img th:src="@{#}" alt="logo"> 
+  </div>
     <div class="gnb">
       <ul>
         <li><a href="#">Menu1</a></li>
