--- a/src/main/resources/static/css/common/adminHeader.css
+++ b/src/main/resources/static/css/common/adminHeader.css
@@ -1,33 +1,33 @@
 
 .header{
   width: 100%;
-  height: 100px;
+  height: 50px;
   box-sizing: border-box;
   display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  background-color: white;
 }
-.header h1.logo{
+.header .logo{
   width: 300px;
-  height: 100px;
-  /* border: 1px solid; */
-  box-sizing: border-box;
-  padding: 10px;
-  margin: 10px;
-  /* background-color: cornflowerblue; */
-  color: #000000;
-  /* justify-content: center; */
-  /* align-items: center; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header .gnb{
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding-left: 100px;
+  padding-right: 30px;
 }
 
 .header .gnb > ul{
   display: flex;
   justify-content: space-between;
-  gap: 100px;
 
 }
 
