--- a/src/main/resources/static/css/common/leftMenu.css
+++ b/src/main/resources/static/css/common/leftMenu.css
@@ -1,13 +1,14 @@
 .left-menu{
+  width: 300px;
   flex: 0 0 300px;
   height: 100vh;
   /* border: 3px solid; */
   box-sizing: border-box;
   background-color: #ffffff;
-  position: sticky;
-  top: 0;
+  position: fixed;
+  top: 50px;
   left: 0;
-  /* padding: 10px; */
+  box-shadow: 5px 5px 5px 1px grey;
 }
 
 .left-menu .left-con{
@@ -28,17 +29,18 @@
 }
 
 .left-menu .left-con .dash-board h1.title{
-  width: 400px;
-  height: 100px;
+  width: 100%;
+  height: 70px;
   /* border:1px solid; */
   box-sizing: border-box;
   color: #ffffff;
   background-color: #000000;
-  padding-top: 20px;
-  padding-left: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .left-menu .left-con .dash-board h1.title a{
- color: #ffffff;
+  color: #ffffff;
 }
 
 .left-menu .left-con .dash-board .menu{
@@ -54,7 +56,7 @@
   box-sizing: border-box;
   padding: 20px 5px;
   position: relative;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .left-menu .left-con .dash-board .menu>ul>li::after{
