--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,70 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="#{login.title}"></title>
-    <link rel="stylesheet" th:href="@{css/bootstrap-toggle.min.css}"/>
-    <link rel="stylesheet" th:href="@{css/login.css}"/>
+    <meta charset="UTF-8">
+    <title>login</title>
+    <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
-<div layout:fragment="content">
-    <div id="login">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div th:if="${param.error}" class="alert alert-danger" role="alert"
-                     th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-                    <span th:text="${errorMsg}"></span>
-                </div>
-                <div class="logo text-center">
-                    <i class="fas fa-thumbs-up fa-8x"></i>
-                </div>
-                <div class="modal-header">
-                    <h1 class="text-center" th:text="'FredBet - ' + #{login.title.short}">Welcome</h1>
-                </div>
-                <div class="modal-body">
-                    <form id="login-form" class="form" th:action="@{/login}" method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control input-lg" name="username"
-                                   th:placeholder="#{login.placeholder.username}"/>
+    <div class="wrap">
+        <div class="login">
+            <h1>Sign In</h1>
+            <form th:action="loginOk" method="post" >
+                <div class="login-form">
+                    <ul>
+                        <li class="s1">
+                            <h4>이메일</h4>
+                            <input type="text" name="mEmail" placeholder="example@gmail.com">
+                        </li>
+                        <li class="s1">
+                            <h4>비밀번호</h4>
+                            <input type="password" name="mPw" placeholder="비밀번호를 입력해주세요">
+                        </li>
+                        <li class="s2">
+                            <input type="submit" value="로그인">
+                        </li>
+                        
+                        <div class="side-Menu">
+                            <a th:href="@{/join}">회원가입</a>
+                            <a th:href="@{#}">이메일찾기</a>
                         </div>
-
-                        <div class="form-group">
-                            <input type="password" class="form-control input-lg" name="password"
-                                   th:placeholder="#{login.placeholder.password}"/>
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-block btn-lg btn-primary" th:value="#{login.button.login}">
-                                <i class="fas fa-sign-in-alt"></i>&nbsp;<span th:text="#{login.button.login}"></span>
-                            </button>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-sm-4">
-                                <input id="remember-me" data-toggle="toggle" data-onstyle="success" type="checkbox" name="remember-me"/>
-                                <label for="remember-me">Auto-Login</label>
-                                <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
-                                      data-placement="top" th:title="#{login.autologin.tooltip}"></span>
-                            </div>
-                            <div class="col-xs-4 col-sm-2">
-                                <div class="form-group">
-                                    <div th:replace="~{fragments/language_selector :: language_selector('btn btn-default language-button dropdown-toggle')}"></div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-sm-6">
-                                <div class="form-group">
-                                    <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" href="#" class="btn btn-default" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
+                    </ul>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
-</div>
 </body>
-<th:block layout:fragment="scripts">
-    <script type="text/javascript" th:src="@{js/bootstrap-toggle.min.js}"></script>
-    <script type="text/javascript" th:src="@{js/pages/tooltip.js}" charset="UTF-8"></script>
-</th:block>
 </html>
