--- a/src/main/resources/static/css/member/memberDetail.css
+++ b/src/main/resources/static/css/member/memberDetail.css
@@ -31,11 +31,9 @@
   background-color: #000000;
   color: #ffffff;
   padding: 5px;
-  /* border: 1px solid #000000; */
 }
 
 .right-menu .right-con{
-  /* border: 1px solid purple; */
   height: auto;
   padding: 50px;
   display: flex;
@@ -45,12 +43,19 @@
 }
 
 .right-menu .right-con .con2{
+  width: auto;
   padding: 10px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
+.right-menu .right-con .con2 .info{
+  border: 1px solid black;
+}
 
 
 
