--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -19,7 +19,7 @@
                         <div class="con2">
                             <div class="img">
                                 <span th:if="${memberDto.mAttach==1}">
-                                    <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px;" alt="">
+                                    <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px; background: no-repeat 50%/cover;" alt="">
                                 </span>
                                 <span th:if="${memberDto.mAttach==0}">
                                     <img src="https://via.placeholder.com/300" alt="">
