--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrap">
         <div class="join">
-            <h1>Sign In</h1>
+            <h1>Sign Up</h1>
             <form th:action="joinOk" method="post" th:object="${memberDto}" enctype="multipart/form-data">
                 <div class="join-form">
                     <ul>
@@ -40,17 +40,18 @@
                         <li class="s1">
                             <h4>희망포지션</h4>
                             <select name="mPosition">
-                                <option value="" selected>포지션</option>
-                                <option value="MULTI" selected>MultiPlayer</option>
-                                <option value="ST" selected>ST</option>
-                                <option value="MF" selected>MF</option>
-                                <option value="DF" selected>DF</option>
-                                <option value="GK" selected>GK</option>
+                                <option value="" selected>포지션 선택</option>
+                                <option value="MULTI">상관없음</option>
+                                <option value="ST">ST</option>
+                                <option value="MF">MF</option>
+                                <option value="DF">DF</option>
+                                <option value="GK">GK</option>
                             </select>
                         </li>
                         <li class="s1">
                             <h4>자기소개</h4>
-                            <input type="memo" name="mIntro" >
+                            <textarea name="mIntro" cols="30" rows="10" style="resize:none;"></textarea>
+                            <!-- <input type="memo" name="mIntro" > -->
                         </li>
                         <li class="s1">
                             <h4>프로필 이미지</h4>
