--- a/src/main/resources/static/css/member/memberUpdate.css
+++ b/src/main/resources/static/css/member/memberUpdate.css
@@ -85,6 +85,7 @@
 }
 
 .right-menu .right-con .con2 .member .info>ul>li{
+  width: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -99,16 +100,15 @@
   font-weight: bold;
 }
 
-.right-menu .right-con .con2 .member .info>ul>li .detail{
+.right-menu .right-con .con2 .member .info>ul>li input{
   width: 250px;
-  border: 1px solid black;
   text-align: center;
 }
 
-.right-menu .right-con .con2 .member .info>ul>li .address{
-  width: 250px;
-  border: 1px solid black;
-  text-align: center;
+.address{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 
