--- a/src/main/resources/templates/fragment/common/adminHeader.html
+++ b/src/main/resources/templates/fragment/common/adminHeader.html
@@ -9,7 +9,7 @@
       <ul>
         <li><a href="#">Menu1</a></li>
         <li><a href="#">Menu2</a></li>
-        <li><a href="#">Menu3</a></li>
+        <li><a th:href="@{/logout}" style="color: red;">Logout</a></li>
       </ul>
     </div>
 </div>
