--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
             <form th:action="loginOk" method="post" >
                 <div class="login-form">
                     <ul>
-                        <li class="s1">
+                        <li>
                             <h4>이메일</h4>
                             <input type="text" name="mEmail" placeholder="example@gmail.com">
                         </li>
@@ -20,15 +20,12 @@
                             <h4>비밀번호</h4>
                             <input type="password" name="mPw" placeholder="비밀번호를 입력해주세요">
                         </li>
-                        <li class="s2">
-                            <input type="submit" value="로그인">
-                        </li>
-                        
-                        <div class="side-Menu">
-                            <a th:href="@{/join}">회원가입</a>
-                            <a th:href="@{#}">이메일찾기</a>
-                        </div>
                     </ul>
+                    <input class="submit" type="submit" value="로그인">
+                </div>
+                <div class="side-Menu">
+                    <button><a th:href="@{/join}">회원가입</a></button>
+                    <button><a th:href="@{#}">이메일찾기</a></button>
                 </div>
             </form>
         </div>
