--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -39,7 +39,18 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="">조직관리</a>
+                            <a href="#">결재관리</a>
+                            <ul class="sub">
+                                <li>
+                                    <a th:href="@{/approval/write}">결재서류 작성</a>
+                                </li>
+                                <li>
+                                    <a th:href="@{/approval/list}">결재서류 리스트</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">조직관리</a>
                             <ul class="sub">
                                 <li>
                                     <a href="#">팀추가</a>
