--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
+    <!-- <script th:src="@{/js/login.js}" defer></script> -->
     <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
@@ -14,14 +15,14 @@
                     <ul>
                         <li>
                             <h4>이메일</h4>
-                            <input type="text" name="mEmail" placeholder="example@gmail.com">
+                            <input type="text" class="mEmail" name="mEmail" placeholder="example@gmail.com">
                         </li>
                         <li class="s1">
                             <h4>비밀번호</h4>
-                            <input type="password" name="mPw" placeholder="비밀번호를 입력해주세요">
+                            <input type="password" class="mPw" name="mPw" placeholder="비밀번호를 입력해주세요">
                         </li>
                     </ul>
-                    <input class="submit" type="submit" value="로그인">
+                    <input class="submit" type="submit" value="로그인" onclick="loginCheck">
                 </div>
                 <div class="side-Menu">
                     <button><a th:href="@{/join}">회원가입</a></button>
