--- a/src/main/resources/templates/calendar/attend/attend.html
+++ b/src/main/resources/templates/calendar/attend/attend.html
@@ -7,14 +7,13 @@
 
 </head>
 <body>
-<div th:replace="~{calendar/common/header :: headerFragment}"></div>
-
+<div th:replace="~{fragment/common/adminHeader :: adminHeaderFragment}"></div>
 <div id="wrap">
-
-    <div th:replace="~{calendar/common/leftMenu :: leftMenuFragment}"></div>
+    <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 
     <div class="right-menu">
-
+        <div class="con">
+            <h2>index</h2>
         <div class="right-con">
 
     <div th:if="${check==1}" class="attendance"><a href="/attend/goWork">출근</a></div>
@@ -25,6 +24,7 @@
         </div>
     </div>
 
+</div>
 </div>
 </body>
 </html>
