--- a/src/main/resources/templates/calendar/memberSchedule/memberScheduleList.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberScheduleList.html
@@ -7,13 +7,13 @@
 
 </head>
 <body>
-<div th:replace="~{calendar/common/header :: headerFragment}"></div>
-
+<div th:replace="~{fragment/common/adminHeader :: adminHeaderFragment}"></div>
 <div id="wrap">
-
-    <div th:replace="~{calendar/common/leftMenu :: leftMenuFragment}"></div>
+    <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 
 <div class="right-menu">
+    <div class="con">
+        <h2>index</h2>
 
     <div class="right-con">
 
@@ -104,6 +104,6 @@
 
 </div>
 </div>
-
+</div>
 </body>
 </html>
