--- a/src/main/resources/templates/calendar/test.html
+++ b/src/main/resources/templates/calendar/test.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" th:href="@{/css/calendar/test.css}">
 </head>
 <body>
-<div th:replace="~{calendar/common/header :: headerFragment}"></div>
-
+<div th:replace="~{fragment/common/adminHeader :: adminHeaderFragment}"></div>
 <div id="wrap">
-
-<div th:replace="~{calendar/common/leftMenu :: leftMenuFragment}"></div>
+    <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 
 <div class="right-menu">
+    <div class="con">
+        <h2>index</h2>
 
     <div class="right-con">
 
+        <div class="attendance"><a href="/attend/goWork">첫 출근 시 출근 찍기</a></div>
         <div class="attendance"><a href="/attend/attend">근태 페이지</a></div>
 
         <div class="MemberSchedule"><a href="/memberSchedule/mySchedulePlus">개인 일정 추가</a></div>
@@ -24,13 +25,13 @@
         <div class="TeamSchedule"><a href="/teamSchedule/teamSchedulePlus">팀 일정 추가</a></div>
         <div class="TeamSchedule"><a href="/teamSchedule/teamScheduleView">팀 일정 조회</a></div>
 
-        <div class="AdminSchedule"><a href="/memberSchedule/myScheduleList">개인 일정 관리</a></div>
-        <div class="AdminSchedule"><a href="/teamSchedule/myScheduleList">팀 일정 관리</a></div>
+        <div class="AdminSchedule"><a href="/memberSchedule/myScheduleList">어드민 개인 전체 일정 관리</a></div>
+        <div class="AdminSchedule"><a href="/teamSchedule/myScheduleList">어드민 팀 전체 일정 관리</a></div>
 
     </div>
 
 </div>
 </div>
-
+</div>
 </body>
 </html>
