--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -28,7 +28,7 @@
                                     <a href="#">일정추가</a>
                                 </li>
                                 <li>
-                                    <a href="#">일정조회</a>
+                                    <a th:href="@{/attend}">일정조회</a>
                                 </li>
                                 <li>
                                     <a href="#">일정수정</a>
