--- a/src/main/resources/templates/calendar/memberSchedule/memberScheduleCheck.html
+++ b/src/main/resources/templates/calendar/memberSchedule/memberScheduleCheck.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" th:href="@{/css/calendar/memberSchedule/memberScheduleCheck.css}">
 </head>
 <body>
-<div th:replace="~{calendar/common/header :: headerFragment}"></div>
-
+<div th:replace="~{fragment/common/adminHeader :: adminHeaderFragment}"></div>
 <div id="wrap">
-
-    <div th:replace="~{calendar/common/leftMenu :: leftMenuFragment}"></div>
+    <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 
 <div class="right-menu">
-
+    <div class="con">
+        <h2>index</h2>
     <div class="right-con">
 
         <div class="MySchedule">
@@ -56,7 +55,7 @@
 
 </div>
 
-
+</div>
 
 </body>
 </html>
