--- a/src/main/resources/templates/calendar/teamSchedule/teamScheduleView.html
+++ b/src/main/resources/templates/calendar/teamSchedule/teamScheduleView.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" th:href="@{/css/calendar/teamSchedule/teamScheduleView.css}">
 </head>
 <body>
-<div th:replace="~{calendar/common/header :: headerFragment}"></div>
-
+<div th:replace="~{fragment/common/adminHeader :: adminHeaderFragment}"></div>
 <div id="wrap">
-
-    <div th:replace="~{calendar/common/leftMenu :: leftMenuFragment}"></div>
+    <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
 
 <div class="right-menu">
 
   <div class="right-con">
+      <div class="con">
+          <h2>index</h2>
 
     <div class="MyAttendance">
 
@@ -46,6 +46,7 @@
 
 </div>
 
+</div>
 </div>
 </body>
 </html>
