댓글카운트 및 조회수 추가

--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -70,10 +70,10 @@
                             <a href="#">동호회게시판</a>
                             <ul class="sub">
                                 <li>
-                                    <a href="#">게시글추가</a>
+                                    <a th:href="@{/admin/boardInsert}">게시글추가</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{/admin/board}">게시글조회</a>
+                                    <a th:href="@{/admin/boardList}">게시글조회</a>
                                 </li>
                                 <li>
                                     <a href="#">게시글수정</a>
