인덱스 및 회원관리 페이지 수정

--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -19,7 +19,9 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #ffffff80;
+  background-color: #00000080;
+  text-shadow: 1px 1px 2px black;
+  color: white;
 }
 
 .error{
