--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -118,7 +118,7 @@
                             <a href="#">관리자 메뉴</a>
                             <ul class="sub">
                                 <li>
-                                    <a href="#">회원관리</a>
+                                    <a th:href="@{/member/memberList}">회원관리</a>
                                 </li>
                                 <li>
                                     <a href="#">공지사항관리</a>
