--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,53 +15,29 @@
             <div class="con">
                 <h2>index</h2>
                 <div class="right-con">
-                    <div class="team-schedule">
-                        <h2>공식일정</h2>
-                        <div class="con2">
+                    <div class="con-box">
+                        <!-- 공식일정 -->
+                        <div class="team-schedule">
+                            <h2>공식일정</h2>
+                            <div class="con2">
+                                
+                            </div>
                             
                         </div>
-                        
-                    </div>
-                    <div class="notice">
-                        <h2>공지사항</h2>
-                        <div class="con2">
-                            <table>
-                                <tr>
-                                    <th>공지사항번호</th>
-                                    <th>제목</th>
-                                    <th>작성자번호</th>
-                                    <th>작성시간</th>
-                                    <th>상세</th>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>title3</td>
-                                    <td>1</td>
-                                    <td>2</td>
-                                    <td><a href="#">상세보기</a></td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="board">
-                        <h2>게시판</h2>
-                        <div class="con2">
-                            <table>
-                                <tr>
-                                    <th>게시글번호</th>
-                                    <th>게시글제목</th>
-                                    <th>작성자번호</th>
-                                    <th>작성시간</th>
-                                    <th>상세</th>
-                                </tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>title2</td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td><a href="#">상세보기</a></td>
-                                </tr>
-                            </table>
+                        <!-- 공지사항, 커뮤니티 게시판 -->
+                        <div class="board">
+                            <div class="notice">
+                                <h2>공지사항</h2>
+                                <div class="con2">
+                                    
+                                </div>
+                            </div>
+                            <div class="community">
+                                <h2>게시판</h2>
+                                <div class="con2">
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
