--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -64,11 +64,8 @@
                         </li>
                         <li class="s2">
                             <input type="submit" value="회원가입">
+                            <button><a th:href="@{/login}">로그인</a></button>
                         </li>
-                        
-                        <div class="side-Menu">
-                            <a th:href="@{/login}">로그인</a>
-                        </div>
                     </ul>
                 </div>
             </form>
