--- a/src/main/resources/templates/member/memberUpdate.html
+++ b/src/main/resources/templates/member/memberUpdate.html
@@ -76,11 +76,11 @@
                                                 <label th:for="profileImg">ProfileImage</label>
                                                 <input type="file" name="profileImg">
                                             </li>
-                                            <li>
-                                                <input type="submit" value="수정완료">
-                                                <button><a th:href="@{/member/detail}">돌아가기</a></button>
-                                            </li>
                                         </ul>
+                                        <div class="btn">
+                                            <input type="submit" value="수정완료">
+                                            <button><a th:href="@{/member/detail}">돌아가기</a></button>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
