--- a/src/main/resources/static/css/common/adminHeader.css
+++ b/src/main/resources/static/css/common/adminHeader.css
@@ -9,6 +9,7 @@
   top: 0;
   z-index: 999;
   background-color: white;
+  border-bottom: 2px solid;
 }
 .header .logo{
   width: 300px;
@@ -16,6 +17,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+}
+
+.header .logo .logo-img{
+  width: 250px;
+  height: 100%;
+  background: url(../../img/logo.png) no-repeat 50%/cover;
 }
 
 .header .gnb{
