--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -17,7 +17,7 @@
   height: auto;
   box-sizing: border-box;
   background-color: #ffffff;
-  border-top: 1px solid #000000;
+  /* border-top: 1px solid #000000; */
   /* border: 1px solid #ffff00; */
   padding: 30px;
   padding-left: 330px;
@@ -27,26 +27,63 @@
   box-shadow: 5px 5px 5px 1px grey;
 }
 
-.right-menu .con h2{
+.right-menu .con .right-con{
+  /* border: 1px solid purple; */
+  height: auto;
+  padding: 30px;
+}
+
+.right-menu .con .right-con .con-box{
+  display: flex;
+  justify-content: space-between;
+}
+
+.right-menu .con .right-con .con2{
+  padding: 10px;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+
+h2{
   background-color: #000000;
   color: #ffffff;
   padding: 5px;
   /* border: 1px solid #000000; */
 }
 
-.right-menu .right-con{
-  /* border: 1px solid purple; */
-  height: auto;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
+.right-menu .con .right-con .con-box .team-schedule{
+  width: 800px;
 }
 
-.right-menu .right-con .con2{
-  padding: 10px;
-  border: 1px solid black;
-  box-sizing: border-box;
+.right-menu .con .right-con .con-box .team-schedule .con2{
+  height: 650px;
 }
+
+.right-menu .con .right-con .con-box .board{
+  width: 690px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.right-menu .con .right-con .con-box .board .con2{
+  height: 300px;
+}
+
+.right-menu .con .right-con .con-box .board .notice{
+
+}
+
+.right-menu .con .right-con .con-box .board .notice .con2{
+
+}
+
+.right-menu .con .right-con .con-box .board .community{
+}
+
+.right-menu .con .right-con .con-box .board .community .con2{
+
+}
+
+
 
