--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -12,7 +12,7 @@
 
 
 .wrap .login{
-  flex: 0 1 400px;
+  flex: 0 1 330px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,9 @@
   align-items: center;
   gap: 10px;
   padding: 10px;
-  background-color: #ffffff80;
+  background-color: #00000080;
+  text-shadow: 1px 1px 2px black;
+  color: white;
 }
 
 .wrap .login form{
@@ -50,4 +52,20 @@
 display: flex;
 justify-content: space-between;
 gap: 10px;
+}
+
+.wrap .login form .oauth{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.wrap .login form .oauth a{
+  width: auto;
+  height: auto;
+}
+
+.wrap .login form .oauth a img{
+  width: 40px;
+  height: 40px;
 }
