--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>join</title>
-    <script th:src="@{/js/join.js}" defer></script>
+    <script th:src="@{/js/telCheck.js}" defer></script>
     <link rel="stylesheet" th:href="@{/css/join.css}">
 </head>
 
