--- a/src/main/resources/static/css/member/memberUpdate.css
+++ b/src/main/resources/static/css/member/memberUpdate.css
@@ -17,7 +17,7 @@
   height: auto;
   box-sizing: border-box;
   background-color: #ffffff;
-  border-top: 1px solid #000000;
+  /* border-top: 1px solid #000000; */
   /* border: 1px solid #ffff00; */
   padding: 30px;
   padding-left: 330px;
@@ -119,5 +119,14 @@
   gap: 10px;
 }
 
+.error{
+  font-size: 12px;
+  color: red;
+  font-weight: bold;
+}
 
+.values{
+  display: flex;
+  flex-direction: column;
+}
 
