회계관련 게시글

--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -83,6 +83,20 @@
                                 </li>
                             </ul>
                         </li>
+
+                        <li>
+                            <a th:href="@{/account/list}">회계관리</a>
+                            <ul class="sub">
+                                <li>
+                                    <a th:href="@{/account/list}">게시글</a>
+                                </li>
+
+                                <li>
+                                    <a href="#">잔여금</a>
+                                </li>
+                            </ul>
+                        </li>
+
                         <li>
                             <a href="">공지사항</a>
                             <ul class="sub">
@@ -100,6 +114,7 @@
                                 </li>
                             </ul>
                         </li>
+
                         <li>
                             <a href="">NAVER API</a>
                             <ul class="sub">
